[package]
name = "tree-text-rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
console = "0.15.8"
include-lua = "0.1.4"
lazy_static = "1.4.0"
mlua = { version = "0.9.7", features = ["lua54", "send", "vendored"] }
phf = { version = "0.11.2", features = ["macros"] }
rand = "0.8.5"
regex = "1.10.4"
